<resources>
    <string name="app_name">YeShiDu</string>
    <string name="loading">加载中......</string>
    <string name="requstPerminssions">权限申请</string>
    <string name="notmore">没有更多了</string>
    <string name="Thepermissionapplicationisrejected">应用需要这些权限保证功能</string>
    <string name="Networkexception">网络异常</string>
    <string name="Clicktheexitprogramagain">再按一次退出</string>
    <string name="Abnormalserver">服务器异常</string>
    <string name="hasError">出错啦</string>
    <string name="checkcity">选择城市</string>
    <string name="addressusername">请输入收货人姓名</string>
    <string name="addressphone">请填写联系电话</string>
    <string name="checkphone">请填写正确联系电话</string>
    <string name="checkaddress">请选择所在地</string>
    <string name="addresscontent">请输入详细地址</string>
    <string name="Addsuccess">添加成功</string>
    <string name="Addfailure">添加失败</string>
    <string name="deleteaddress">您确定删除此地址么？</string>
    <string name="prompt">提示</string>
    <string name="Deletesuccess">删除成功</string>
    <string name="Setupsuccess">设置成功</string>
    <string name="suretodelete">您确定删除么？</string>
    <string name="Thecardholder">持卡人：</string>
    <string name="Thestarttime">开始时间</string>
    <string name="Theendtime">结束时间</string>
    <string name="endtime_less_start">结束时间不能小于开始时间</string>
    <string name="select_the_starting_and_ending">请选择查询起止时间</string>
    <string name="Get__verification_code">获取验证码</string>
    <string name="Please_enter_verification_code">请输入邮箱验证码</string>
    <string name="Please_enter_email">请输入邮箱号</string>
    <string name="Please_enter_email_true">请输入正确邮箱号</string>
    <string name="Please_enter_password">请输入密码</string>
    <string name="Please_enter_password_again">请再次输入密码</string>
    <string name="passwords_do_not_match">两次密码不一致</string>
    <string name="successful_login">修改成功,请重新登录</string>
    <string name="Welcome_back">欢迎回来</string>
    <string name="Authorization_to_cancel">授权取消</string>
    <string name="password_length_six">密码长度最小六位</string>
    <string name="Binding_to_log_in">绑定登录</string>
    <string name="binding_login">请输入账号密码完成帐号绑定登录</string>
    <string name="home">首页</string>
    <string name="fenlei">分类</string>
    <string name="recommen">达人推荐</string>
    <string name="Personal_center">个人中心</string>
    <string name="Please_login_first">请先登录</string>
    <string name="Login_failed_login">登录失效，请重新登录</string>
    <string name="Save_success">保存成功</string>
    <string name="The_user_name_is_too_long">用户名过长</string>
    <string name="Modify_the_nickname">修改昵称</string>
    <string name="For_the_payment">待付款</string>
    <string name="To_send_the_goods">待发货</string>
    <string name="For_the_goods">待收货</string>
    <string name="To_evaluate">待评价</string>
    <string name="been_evaluated">已经评价过了~</string>
    <string name="Courier_company">快递公司：</string>
    <string name="Courier_number">快递单号：</string>
    <string name="The_order_no">订单编号：</string>
    <string name="Place_the_order_of_time">下单时间：</string>
    <string name="Please_enter_keywords">请输入关键字</string>
    <string name="number_of">数量 ×</string>
    <string name="total_of">共</string>
    <string name="items">件商品</string>
    <string name="Abnormal_orders">订单异常</string>
    <string name="receiving_address">请填写收货地址</string>
    <string name="select_payment">请选择支付方式~</string>
    <string name="High_praise">好评</string>
    <string name="evaluation">中评</string>
    <string name="Bad_review">差评</string>
    <string name="not_evaluation_content">用户未填写评价内容~</string>
    <string name="Insufficient_inventory">库存不足</string>
    <string name="Collection_success">收藏成功</string>
    <string name="Cancel_collection">取消收藏</string>
    <string name="sales">销量：</string>
    <string name="Product_evaluation">商品评价</string>
    <string name="Collection_failure">收藏失败</string>
    <string name="Cancel_failure">取消失败</string>
    <string name="Added_cart_successfully">已成功加入购物车</string>
    <string name="Join_failure_stock_shortage">加入失败，库存不足</string>
    <string name="Failed_add_shopping_cart">加入购物车失败</string>
    <string name="agreement_registration_first">请先勾选同意注册协议</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="maximum_balance">当前账户最多可提现余额：</string>
    <string name="tail">尾号</string>
    <string name="Please_enter_title">请输入标题</string>
    <string name="Please_enter_content">请输入内容</string>
    <string name="Not_at_the">未开始</string>
    <string name="not_yet_started">活动尚未开始</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="salesNum">销售量：</string>
    <string name="jian">件</string>
    <string name="Item_total">件商品 合计</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="cancel_the_order">确定取消订单吗？</string>
    <string name="Cancel_success">取消成功</string>
    <string name="receipt_successful">确认收货成功</string>
    <string name="receipt_failure">确认收货失败</string>
    <string name="delete_it">您确定删除吗？</string>
    <string name="Application_successful">申请成功</string>
    <string name="Apply_for_failure">申请失败</string>
    <string name="In_the_application">申请中</string>
    <string name="The_account_balance">账户余额：</string>
    <string name="want_to_log_out">您确定退出登录么？</string>
    <string name="all">全部</string>
    <string name="Has_been_completed">已完成</string>
    <string name="Please_select_products">请选择商品</string>
    <string name="Delete_failed">删除失败</string>
    <string name="user">帐号</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="facebook_login">Facebook登录</string>
    <string name="not_user">还没有帐号？</string>
    <string name="rigster">立即注册？</string>
    <string name="login_rigster">登录注册</string>
    <string name="The_consignee">收货人：</string>
    <string name="Shipping_address">收货地址</string>
    <string name="consignee_name">请输入收货人姓名</string>
    <string name="phone_number">联系电话：</string>
    <string name="contact_number">请填写联系电话</string>
    <string name="the_area">所在地区：</string>
    <string name="select_a"><![CDATA[请选择 >]]></string>
    <string name="detailed_address">请输入详细地址</string>
    <string name="default_shipping_address">设为默认收货地址</string>
    <string name="submit">提交</string>
    <string name="Add_shipping_address">新增收货地址</string>
    <string name="Bank_card_management">银行卡管理</string>
    <string name="not_bound_your_bank_card">您还未绑定银行卡</string>
    <string name="Bank_card_binding">绑定银行卡</string>
    <string name="Copyright_information">版权信息</string>
    <string name="Bank_card_number">银行卡号</string>
    <string name="enter_your_bank">请输入银行卡号</string>
    <string name="Confirm_the_bank">确认银行卡号</string>
    <string name="bank_card_number_again">请再次输入银行卡号</string>
    <string name="account_holder">开户人姓名</string>
    <string name="enter_account_holder">请输入开户人姓名</string>
    <string name="Where_bank">开户行</string>
    <string name="enter_where_bank">请输入开户行</string>
    <string name="Mailbox_code">邮箱验证码</string>
    <string name="Change_password">修改密码</string>
    <string name="email">邮箱</string>
    <string name="emali_code">邮箱验证码</string>
    <string name="Set_the_password">设置密码</string>
    <string name="Confirm_password">确认密码</string>
    <string name="reset_password">重置密码</string>
    <string name="Think_of_password">想起密码？</string>
    <string name="Pay_for_results">支付结果</string>
    <string name="successful_payment">恭喜您已经支付成功</string>
    <string name="view_order">查看订单</string>
    <string name="back">返回</string>
    <string name="payment_failed">抱歉，支付失败</string>
    <string name="pay_for">重新支付</string>
    <string name="Financial_details">财务明细</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="search">搜索</string>
    <string name="Contact_us">联系我们</string>
    <string name="information_setting">账号资料设置</string>
    <string name="Head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="save">保存</string>
    <string name="order_details">订单详情</string>
    <string name="Amount_goods">商品金额：</string>
    <string name="order_total">订单合计：</string>
    <string name="pingjia">评价</string>
    <string name="My_order">我的订单</string>
    <string name="My_recommendation_code">我的推荐码</string>
    <string name="Reward_rules">奖励规则</string>
    <string name="interested_in">请输入您感兴趣的内容</string>
    <string name="sure_the_order">确认订单</string>
    <string name="confirm">确认</string>
    <string name="total_amount">总金额：</string>
    <string name="Choose_payment">选择支付方式</string>
    <string name="Order_payment">订单支付</string>
    <string name="order_number">订单号：</string>
    <string name="order_amount">订单金额：</string>
    <string name="pay">支付</string>
    <string name="balance_of">余额</string>
    <string name="Purchase_quantity">购买数量</string>
    <string name="more">查看更多</string>
    <string name="no_relevant">暂无相关评价</string>
    <string name="collection">收藏</string>
    <string name="Add_cart">加入购物车</string>
    <string name="Buy_now">立即购买</string>
    <string name="Registered_members">会员注册</string>
    <string name="recommended_code">推荐码</string>
    <string name="enter_recommendation_code">请输入推荐码</string>
    <string name="deemed_consent">*注册即视为同意</string>
    <string name="registration_agreement">《注册协议》</string>
    <string name="enter_the_product_name">请输入商品名称</string>
    <string name="My_collection">我的收藏</string>
    <string name="delete">删除</string>
    <string name="Order_evaluate">订单评价</string>
    <string name="be_better_products">亲？您对这个商品还满意吗？ 您的评价会帮助我们选择更好的商品哦~</string>
    <string name="upload_pictures">上传图片</string>
    <string name="Submit_application">提交申请</string>
    <string name="Withdrawal_amount">提现金额</string>
    <string name="enter_the_withdrawal_amount">请输入提现金额</string>
    <string name="not_less_than">温馨提示：单次提现金额不低于</string>
    <string name="fee_is">，提现手续费为</string>
    <string name="confirm_withdrawal">确认提现</string>
    <string name="List_referees">推荐人列表</string>
    <string name="feedback">意见反馈</string>
    <string name="title">标题：</string>
    <string name="enter">请填写</string>
    <string name="content">内容：</string>
    <string name="comments_on_the_platform">请描述您出现的问题或对平台的建议和意见</string>
    <string name="shopping_cart">购物车</string>
    <string name="Recommendation_details">达人推荐详情</string>
    <string name="Modify_user_name">修改用户名</string>
    <string name="enter_new_user">请输入新的用户名</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="delete_this_address">确定要删除此地址么？</string>
    <string name="product_name">请输入商品名称</string>
    <string name="Daily_exchange">每日大牌汇</string>
    <string name="hot_cakes">热销商品</string>
    <string name="default_address">默认地址</string>
    <string name="editor">编辑</string>
    <string name="original_price">原价:€</string>
    <string name="Has_brought">已领：</string>
    <string name="Look_at_all">查看全部</string>
    <string name="financial_management">财务管理</string>
    <string name="cash_withdrawals">申请提现</string>
    <string name="Withdrawal_record">提现记录</string>
    <string name="Platform_introduced">平台介绍</string>
    <string name="qr_code">我的二维码</string>
    <string name="invitation_list">邀请列表</string>
    <string name="Amount_of_goods">商品金额：</string>
    <string name="Platform_is_introduced">平台介绍</string>
    <string name="Future_generations">全选</string>
    <string name="settle_accounts">去结算</string>
    <string name="Excluding_freight_costs">不含运费</string>
    <string name="zongji">总计：</string>
    <string name="checkCountry">选择国家</string>
    <string name="pty">葡萄牙</string>
    <string name="xby">西班牙</string>
    <string name="yy">美国</string>
    <string name="ydl">意大利</string>
    <string name="fy">法国</string>
    <string name="next">下一步</string>
</resources>