<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgea"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x37"
        android:background="@color/bgfff"
        android:visibility="visible">

        <FrameLayout
            android:id="@+id/rl_back"
            android:layout_width="@dimen/x30"
            android:layout_height="@dimen/x30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@mipmap/back" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Bank_card_management"
            android:textColor="@color/text333"
            android:textSize="@dimen/x13" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/bgea"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:background="@color/bgfff">

        <TextView
            android:id="@+id/tv_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x20"
            android:textColor="@color/text333" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y5"
        android:background="@color/bgea"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgfff"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/Withdrawal_amount"
            android:textColor="@color/text333" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/bgea"
            android:hint="@string/enter_the_withdrawal_amount"
            android:inputType="numberDecimal"
            android:padding="@dimen/x5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_yue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginLeft="@dimen/x20"
                android:layout_marginTop="@dimen/x10"
                android:layout_weight="1"
                android:text="@string/maximum_balance"
                android:textColor="@color/text666"
                android:textSize="@dimen/x11" />


            <TextView
                android:id="@+id/tv_tixianjilu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginLeft="@dimen/x20"
                android:layout_marginRight="@dimen/x20"
                android:layout_marginTop="@dimen/x10"
                android:text="@string/Withdrawal_record"
                android:textColor="@color/bgtitle"
                android:textSize="@dimen/x11" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/not_less_than"
            android:textColor="@color/text666"
            android:textSize="@dimen/x10" />

        <TextView
            android:id="@+id/tv_tixianmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginTop="@dimen/x10"
            android:textColor="#0b7de7"
            android:textSize="@dimen/x10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/fee_is"
            android:textColor="@color/text666"
            android:textSize="@dimen/x10" />

        <TextView
            android:id="@+id/tv_feilv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/x10"
            android:textColor="#0b7de7"
            android:textSize="@dimen/x10" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/x262"
        android:layout_height="@dimen/y33"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/x15"
        android:background="@mipmap/btn_login"
        android:text="@string/confirm_withdrawal"
        android:textAllCaps="false"
        android:textColor="@color/bgfff"
        android:textSize="@dimen/x15"
        android:visibility="visible" />

</LinearLayout>
