<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x37"
            android:background="#fbfbfb"
            android:visibility="visible">

            <FrameLayout
                android:id="@+id/rl_back"
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/x30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@mipmap/back" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Shipping_address"
                android:textColor="#333333"
                android:textSize="@dimen/x16" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y39"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:text="@string/The_consignee"
                    android:textColor="#333"
                    android:textSize="@dimen/x12" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/x10"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:gravity="end|center_vertical"
                    android:hint="@string/consignee_name"
                    android:inputType="text"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textColorHint="#999"
                    android:textSize="@dimen/x12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y39"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:text="@string/phone_number"
                    android:textColor="#333"
                    android:textSize="@dimen/x12" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/x10"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:gravity="end|center_vertical"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textColorHint="#999"
                    android:textSize="@dimen/x12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y39"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:text="@string/the_area"
                    android:textColor="#333"
                    android:textSize="@dimen/x12" />

                <TextView
                    android:id="@+id/tv_check_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:gravity="end|center_vertical"
                    android:hint="@string/select_a"
                    android:textColor="#999"
                    android:textSize="@dimen/x12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <EditText
                android:id="@+id/et_addressContent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y90"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:layout_marginTop="@dimen/x10"
                android:background="#00ffffff"
                android:gravity="top"
                android:hint="@string/detailed_address"
                android:inputType="text"
                android:textColor="#999"
                android:textColorHint="#999"
                android:textSize="@dimen/x12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y39"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/x10"
                    android:text="@string/default_shipping_address"
                    android:textColor="#333333"
                    android:textSize="@dimen/x12" />

                <CheckBox
                    android:id="@+id/btnIsChoosed"
                    android:layout_width="@dimen/x18"
                    android:layout_height="@dimen/x18"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/x5"
                    android:layout_marginRight="@dimen/x15"
                    android:background="@drawable/rb_selector"
                    android:button="@null" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <Button
                android:id="@+id/btn_add_address"
                android:layout_width="@dimen/x299"
                android:layout_height="@dimen/y30"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/x15"
                android:layout_marginTop="@dimen/x15"
                android:background="@mipmap/btn_login"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="@dimen/x15" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
