<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x37"
            android:background="@color/bgfff"
            android:visibility="visible">

            <FrameLayout
                android:id="@+id/rl_back"
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/x30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@mipmap/back" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/feedback"
                android:textColor="@color/text333"
                android:textSize="@dimen/x13" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y39"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:text="@string/title"
                    android:textColor="#333"
                    android:textSize="@dimen/x12" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/x10"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:gravity="end|center_vertical"
                    android:hint="@string/enter"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textColorHint="#999"
                    android:textSize="@dimen/x12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y39"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:text="@string/content"
                    android:textColor="#333"
                    android:textSize="@dimen/x12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <EditText
                android:id="@+id/et_Content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y90"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:layout_marginTop="@dimen/x10"
                android:background="#00ffffff"
                android:gravity="top"
                android:hint="@string/comments_on_the_platform"
                android:inputType="text"
                android:textColor="#999"
                android:textColorHint="#999"
                android:textSize="@dimen/x12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc"></View>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/x299"
                android:layout_height="@dimen/y30"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/x15"
                android:layout_marginTop="@dimen/x15"
                android:background="@mipmap/btn_login"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="@dimen/x15" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
